client/src/scss/components/objectCard.scss
$UPLOAD-IMAGE-WIDTH: 234px;

.object-card {
  border-width: 1px;
  border-style: solid;
  border-color: $COLOR-GREY-BORDER;
  border-radius: 10px;
  color: $COLOR-TEXT;
  height: 100%;
  position: relative;
  overflow: hidden;

  &__bg {
    position: absolute;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
    background-size: cover;
    background-repeat: no-repeat;

    &_vip-vertical {
      background-image: url('../../src/images/object/bg_vip_vertical.svg');
    }

    &_premium-vertical {
      background-image: url('../../src/images/object/bg_premium_vertical.svg');
    }

    &_vip-horizontal {
      background-image: url('../../src/images/object/bg_vip_horizontal.svg');
    }

    &_premium-horizontal {
      background-image: url('../../src/images/object/bg_premium_horizontal.svg');
    }
  }

  &__icons-block {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
    margin-bottom: 10px;

    &_no {
      flex-direction: column;
      justify-content: space-between;
      align-items: flex-start;
    }

    &-item {
      &_icon {
        display: flex;
        flex-direction: column;
        align-items: flex-end;
        justify-content: flex-end;
        flex-grow: 1;
        height: 100%;
      }
    }
  }

  &__icon {
    width: 20px;
    height: 20px;
    margin-bottom: 5px;
  }

  &__link {
    text-decoration: none;
  }

  &__wrap {
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    padding: 8px;
    height: 100%;
    box-sizing: border-box;

    &-img {
      width: 100%;
      margin-bottom: 20px;
      position: relative;
      background-color: #000;
      display: flex;
      align-items: center;
      flex-direction: row;
      justify-content: center;
      border-radius: 4px;
      overflow: hidden;

      @include media(desktop) {
        height: 150px;
      }
    
      @include media(tablet-landscape) {
        height: 150px;
      }
    
      @include media(mobile) {
        height: 240px;
      }

      &_list-view {
        width: 220px;
        margin-right: 20px;
        margin-bottom: 0;
      }
    }

    &-img-sample {
      width: $UPLOAD-IMAGE-WIDTH;
      height: $UPLOAD-IMAGE-WIDTH / 1.5;
      margin-bottom: 20px;
      position: relative;
      background-color: #000;
      display: flex;
      align-items: center;
      flex-direction: row;
      justify-content: center;
      border-radius: 4px;
      overflow: hidden;

      &_default {
        background-color: $COLOR-WHITE;
        border: 1px solid $COLOR-GREY-BORDER;
        box-sizing: border-box;
      }

      @include media(mobile) {
        margin-right: 0;
        // width: calc(50% - 15px);
      }
    }

    &-info {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      align-items: flex-start;
      align-self: center;
      width: 100%;
      height: 50%;

      &__item {
        margin-bottom: 8px;
      }

      &-details {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        align-self: center;
        width: 100%;
        margin-bottom: 5px;

        &-item {
          width: $WIDTH-33;
          font-size: 12px;
          color: $COLOR-TITLE;
          text-align: center;
          display: flex;
          justify-content: center;
          align-items: flex-end;
          border-left: 1px solid $COLOR-TITLE;

          &_garage {
            width: 50%;
          }

          &_list-view {
            width: auto;
            text-align: left;
            padding: 0 15px;
    
            &:nth-child(1) {
              padding-left: 0;
            }
          }

          &_grid {
            width: auto;
            border-left: 0;
            margin-bottom: 4px;

            &:nth-child(2n + 2) {
              border-left: 1px solid $COLOR-TITLE;
            }
          }

          &_width {
            &-auto {
              width: auto;
              padding: 0 5px;
            }

            &-half {
              width: 50%;
            }
          }

          &:nth-child(1) {
            border-left: 0;
          }
        }

        &_list-view {
          justify-content: flex-start;
        }

        &_grid {
          display: grid;
          grid-template-columns: 50% 50%;
          margin-bottom: 5px;
        }

        &_last {
          justify-content: center;
        }
      }

      &_top {
        width: 100%;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        align-self: center;
        margin-bottom: 12px;
    
        &_list {
          margin-bottom: 6px;
        }
      }

      &_bottom {
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: space-between;

        &_list {
          height: auto;
        }
      }

      &_list-view {
        width: 100%;
        height: auto;
        max-width: 340px;
        justify-content: flex-start;
      }
    }

    &_list-view {
      gap: 0 20px;
      display: grid;
      align-items: center;
      justify-items: start;
      grid-auto-flow: column;
      grid-template-columns: 220px 1fr 200px;
    }
  }

  &__price {
    color: $COLOR-TITLE;
    display: flex;
    flex-direction: column;
    justify-content: center;
    position: relative;

    &_number {
      font-size: 16px;
      font-weight: 700;
    }

    &_text {
      font-size: 12px;
      font-weight: 400;
      position: absolute;
      bottom: 0;
      left: 105%;
      width: 50px;
    }
  }

  &__btn {
    width: 100%;

    &_favorites {
      width: 30px;
      padding: 0 0 0 10px;
      display: flex;
      flex-direction: column;
      align-items: center;
      transition: all 0.5s ease;
    }

    &_show-phone {
      letter-spacing: 0;
      padding: 5px 10px;
      background-color: $COLOR-TEXT-DISABLED;
      margin-bottom: 10px;
      font-size: 12px;

      &:hover {
        background-color: $COLOR-BLUE-LIGHT;
      }
    }

    &_write-message {
      letter-spacing: 0;
      padding: 5px 10px;
      background-color: $COLOR-TEXT-DISABLED;
      margin-bottom: 6px;
      font-size: 12px;

      &:hover {
        background-color: $COLOR-BLUE-LIGHT;
      }
    }
  }

  &__address {
    color: $COLOR-BASE;
    overflow: hidden;
    margin-bottom: 8px;

    &_list-view {
      height: auto;
    }
  }

  &__district {
    font-size: 12px;
    color: $COLOR-BASE;
  }

  &__agency,
  &__area,
  &__date,
  &__address {
    font-size: 13px;
  }


  &__date {
    text-align: right;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    color: $COLOR-BASE;
    margin: 0;
    width: 100%;
  }

  &__agency {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    height: 30px;
    margin-top: 0px;
    padding: 2px 10px;
    text-align: center;
    color: $COLOR-TITLE;
    border-radius: 10px;
    font-weight: 400;
    font-size: 12px;
    background-color: $COLOR-GREY-LIGHT;

    &_list-view {
      height: 30px;
    }

    &_vip {
      font-weight: 500;
      color: $COLOR-WHITE;
      background-color: #B783FD;
    }

    &_premium {
      font-weight: 500;
      color: $COLOR-WHITE;
      background-color: #B7D406;
    }

    &_up {
      font-weight: 500;
      color: $COLOR-WHITE;
      background-color: #b5bb77;
    }
  }

  &__text {
    &-bold {
      font-weight: 700;
    }
  }

  &__action {
    display: none;

    &-top {
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      justify-content: space-between;
    }

    &_list-view {
      display: flex;
      flex-direction: column;
      align-items: flex-end;
      justify-content: space-between;
      padding: 5px 5px 1px 5px;
      flex-grow: 1;
      height: 100%;
      width: 100%;
      box-sizing: border-box;
    }

    &-item {
      margin-bottom: 10px;
    }
  }

  &_fixed-width {
    width: 250px;

    @include media(mobile) {
      align-self: center;
    }
  }

  &__img {
    max-height: 100%;
  }
}

